style: rename running_fba page to flux_balance_analysis

--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -3,7 +3,7 @@ nav:
   - Overview: index.md
   - Installation: installation.md
   - Getting started: getting_started.md
-  - Running FBA: running_fba.md
+  - Flux balance analysis: flux_balance_analysis.md
   - GEM extraction using tINIT: gem_extraction.md
   - GEM comparison: gem_comparison.md
 theme:
