--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -3,8 +3,6 @@ name: build site
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
   build:
@@ -13,6 +11,11 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Set python version
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.7.7'
 
     - name: Install MkDocs
       run: |
