fix: another attempt to repair site deploy

--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install MkDocs
       run: |
         sudo pip install pip --upgrade
-        sudo pip install mkdocs mkdocs-material
+        sudo pip install mkdocs
       
     - name: Build site
       run: |
