--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -2,29 +2,28 @@ name: build site
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Install MkDocs
+        run: |
+          sudo pip install pip --upgrade
+          sudo pip install mkdocs mkdocs-material
 
-    - name: Install MkDocs
-      run: |
-        sudo pip install pip --upgrade
-        sudo pip install mkdocs
-      
-    - name: Build site
-      run: |
-        cd mkdocs
-        mkdocs build -d ../docs
+      - name: Build site
+        run: |
+          cd mkdocs
+          mkdocs build -d ../docs
 
-    - name: Commit changes
-      run: |
-        git config --global user.name 'GitHub Action'
-        git config --global user.email 'JonathanRob@users.noreply.github.com'
-        git commit -am "Build site"
-        git push
+      - name: Commit changes
+        run: |
+          git config --global user.name 'GitHub Action'
+          git config --global user.email 'JonathanRob@users.noreply.github.com'
+          git commit -am "Build site"
+          git push
