--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -25,5 +25,6 @@ jobs:
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'JonathanRob@users.noreply.github.com'
-          git commit -am "Build site"
+          git add docs/
+          git commit -m "Build site"
           git push
