--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - GEM extraction using ftINIT: gem_extraction.md
   - GEM comparison: gem_comparison.md
   - GEM extraction from scRNA-Seq data: gem_extraction_sc.md
+  - Gene essentiality with DepMap: gene_essentiality.md
   - Additional tools: additional_tools.md
   - FAQs and troubleshooting: faq_troubleshoot.md
   - Contact: contact.md
